# llmjam

./: .env.example  README.md  audio_input.py  llm_client.py  llmjam.py  midi_input_echo_all_ports.py  midi_monitor_all_ports_safe.py  midi_output.py  midi_output_demo_send_note.py  pitch_to_midi.py  pyproject.toml  route_midi.py  show_all_midi.py  show_midi.py
